my first commit

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,20 +1,17 @@
 # Context path setup
-server.servlet.context-path=/vote-app
+server.servlet.context-path=/
 
 server.port=9090
 
 # create and drop tables and sequences, loads import.sql
 spring.jpa.hibernate.ddl-auto=update
+
 # Oracle settings
-
-#spring.datasource.url=jdbc:oracle:thin:@172.16.200.201:1521:HRMS
 spring.datasource.url=jdbc:oracle:thin:@localhost:1521:orcl
-#spring.datasource.url=jdbc:oracle:thin:@43.243.206.171:1521:orcl
-#spring.datasource.url=jdbc:oracle:thin:@172.16.200.23:1521:HRMS
-
-spring.datasource.username=knit_hrms
-spring.datasource.password=knit_hrms
 spring.datasource.driver.class=oracle.jdbc.OracleDriver
+
+spring.datasource.username=g7icGNFPE10A/7/lWe9bxraCZ27ZOXhd
+spring.datasource.password=g7icGNFPE10A/7/lWe9bxraCZ27ZOXhd
 
 # logging
 logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} %-5level %logger{36} - %msg%n
@@ -22,11 +19,11 @@ logging.level.org.hibernate.SQL=debug
 
 # To store logs to external file
 # Here use strictly forward "/" slash for both Windows, Linux or any other os, otherwise, your logs it won't work.
-logging.file=C:/log/vote-app/vote-app.log
+logging.file=C:/log/app/app.log
 
 # To customize logging pattern.
-#logging.pattern.file= "%d{yyyy-MM-dd HH:mm:ss} - %msg%n"
-logging.pattern.file=%d %p %c{1.} [%t] %m%n
+logging.pattern.file= "%d{yyyy-MM-dd HH:mm:ss} - %msg%n"
+#logging.pattern.file=%d %p %c{1.} [%t] %m%n
 
 # HikariCP settings
 # spring.datasource.hikari.*
