--- a/pom.xml
+++ b/pom.xml
@@ -12,8 +12,8 @@
     <artifactId>vote-app</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <packaging>war</packaging>
-    <name>vote-app</name>
-    <description>Demo project for Spring Boot</description>
+    <name>app</name>
+    <description>Spring Boot Database Login With Encryted Password</description>
 
     <properties>
         <java.version>1.8</java.version>
@@ -63,7 +63,6 @@
         <dependency>
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-core</artifactId>
-            <!--<version>5.2.6.Final</version>-->
         </dependency>
 
         <dependency>
@@ -77,7 +76,23 @@
             <version>3.2.1</version>
         </dependency>
 
+        <!--jasypt-Dependency to support Encrypted password-->
+        <dependency>
+            <groupId>com.github.ulisesbocchio</groupId>
+            <artifactId>jasypt-spring-boot-starter</artifactId>
+            <version>2.0.0</version>
+        </dependency>
+
+        <!-- https://mvnrepository.com/artifact/junit/junit -->
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.13-rc-1</version>
+            <scope>test</scope>
+        </dependency>
+
     </dependencies>
+
 
     <build>
         <plugins>
