--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 # Context path setup
 server.servlet.context-path=/
 
+#Define server port
 server.port=9090
 
 # create and drop tables and sequences, loads import.sql
